tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__ThaumometricEsse-xdiDnTdpTgW6POwCuDlPgg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3992808331113222018,
  "prerequisites": [
    1396,
    16502119565900600744,
    8519757157673233156
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After meddling with the 4th Dimension, you've finally discovered a way to access its unlimited Essentia supply. The Thaumometric Essentia Cell is your tool for extracting Essentia from this boundless source—think of it as your unlimited magic credit card.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Thaumometric Essentia Cell",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1396,
    16502119565900600744,
    8519757157673233156
  ],
  "rewards": [],
  "tasks": []
}
