tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__TheQuestforHolyW-WPoaCPPwTBSyn2dmh5DcBA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17577632996684520452,
  "prerequisites": [
    17176799509266719157,
    1643888088811395953,
    2613291457428301767
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You got to take a well deserved break from the waterline in UHV, but now that you are going to be making optical circuits, your Grade 6 Purified Water will no longer be enough. Using the Degasser, you can remove all the leftover decontaminants from previous processes and make even more pure water, pure enough for Optical Circuits.\n\nThe tooltip and list of requirements looks intimidating. Try breaking it down into small, digestible units of logic and you will quickly arrive at a solution.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Quest for Holy Water",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17176799509266719157,
    1643888088811395953,
    2613291457428301767
  ],
  "rewards": [],
  "tasks": []
}
