tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__ThermosinkRadiat-AAAAAAAAAAAAAAAAAAAMzQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3277,
  "prerequisites": [
    12108002297788236866,
    3275
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the control of spacetime you have achieved and its 0K temperature it would be possible to make an even better cooling unit. A casing able to keep its room temperature very low and nanites which can transfer heat effectively because of their small bodies. This doesn't quite work and some coolant is still needed, but water freezes at those temperatures so super coolant will be our choice.\n\n[note]The Thermosink Radiator allows for 4/4 OC making it possible to speed through recipes. It requires 10/s of super coolant in its hatch, it's in the same place as the Liquid Cooling Tower.[/note]\n\n[warn]This upgrade is incompatible with its lower tier predecessor.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Thermosink Radiator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12108002297788236866,
    3275
  ],
  "rewards": [],
  "tasks": []
}
