tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__TooMuchMercury-AAAAAAAAAAAAAAAAAAAIzQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2253,
  "prerequisites": [
    1093
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After a couple of hours...days...weeks...of processing redstone for chrome you'll have a massive stockpile of Mercury and not know what to do with it. You can store it all in supertanks, but really, how much hypochlorous acid does one need? Instead you can build an Acid Generator and at least get a little power out of it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lToo Much Mercury?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1093
  ],
  "rewards": [],
  "tasks": []
}
