tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__TransformandStay-AAAAAAAAAAAAAAAAAAAKqw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2731,
  "prerequisites": [
    2006
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Active Transformers will transform power up or down at only a 0.004% power loss, making using several in a row obsolete, if you can afford it. Unfortunately, it's kinda expensive. On the other hand, you can use it to turn your lasers from your laser hatches, which is probably a better use.\n\nIt doesn't need a Maintenance Hatch, just the I/O Hatches.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Transform and...Stay Put Actually",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2006
  ],
  "rewards": [],
  "tasks": []
}
