tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__TravellersShoesU-AAAAAAAAAAAAAAAAAAAG-g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1786,
  "prerequisites": [
    1781
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your shoes can be equipped with a few modifications like water walk, double jump, lead boots or slimy shoes. Place the shoes in the middle of a Crafting Station.\n\nWater Walk allows you to walk over water.\nDouble Jump allows you to jump while in the air to jump again.\nLead Boots allows you to walk under water, prevents you from swimming, and may cause excessive Blub. Bring along potions of water breathing.\nSlimy Shoes reduces fall damage.\n\nHint:\nAutorepair can be added to the shoes as well.\nEvery Armor part has 3 Slots for modification.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Traveller's Shoes Upgrades",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1781
  ],
  "rewards": [],
  "tasks": []
}
