tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__TwoMillionTurbin-AAAAAAAAAAAAAAAAAAAMcw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3187,
  "prerequisites": [
    3186
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Hopefully, not more than a handful. The objective here is for each of them to output close to 2 million EU/t.\n\nHow can you get there? Look at the UV Dynamo Hatch's recipe and you have your new objective. When you arrive there, each turbine that is equipped with that impressive block will be able to output up to 2,097,152 EU/t, which again opens you up to new turbine opportunities. Some good choices at this point are as follows:\n\nLarge Cosmic Neutronium 225% 1,360,800 EU/t\nLarge Ichorium 225% 1,360,800 EU/t (very durable)\nLarge Awakened Draconium 195% 491,400 EU/t\nLarge Trinium 185% 1,451,840 EU/t\n\nAt this point, you might consider building more t1 Fusion Reactors to process other materials. Even if you stop the reactor you're using to generate this plasma, the EU cost of restarting it is less than 1 bucket of plasma, so it's probably not that big of a deal.\n\nMake a normal or buffered UV dynamo to complete the quest.\n\n[note]At this point, you really should be looking into the XL turbine chain, from XL supercritical to dense to normal steam.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Two Million Turbines",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3186
  ],
  "rewards": [],
  "tasks": []
}
